@@ -214,6 +214,9 @@ public class PubmaticBidder implements Bidder<BidRequest> {
     }
 
     private static BigDecimal parseKadFloor(String kadFloorString) {
+        if (StringUtils.isBlank(kadFloorString)) {
+            return null;
+        }
         try {
             return new BigDecimal(StringUtils.trimToEmpty(kadFloorString));
         } catch (NumberFormatException e) {
@@ -274,7 +277,7 @@ public class PubmaticBidder implements Bidder<BidRequest> {
             return banner;
         }
 
-        final Format firstFormat = format.get(0);
+        final Format firstFormat = format.getFirst();
 
         return modifyWithSizeParams(banner, firstFormat.getW(), firstFormat.getH());
     }
